# Freematics

./: .gitignore
firmware_v5/datalogger/: .gitignore  README.md  api.yaml  config.h  datalogger.h  datalogger.ino  dataserver.cpp  list.cpp  list.h  platformio.ini  sqlite-logger.cpp  sqlite-logger.h  webserver.cpp  webserver.h
firmware_v5/datalogger/test/: test_main.cpp
firmware_v5/datalogger/unittest/: CMakeLists.txt  README.md  beacon.cc  check_sd.ino  hello_test.cc  run.sh
firmware_v5/telelogger/: custom.h
